Fixed the about page background overflow

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -76,7 +76,8 @@ html {
 
 body,
 #root {
-  height: 100%;
+  background-color: var(--main-gray);
+  background-image: linear-gradient(62deg, #434649 0%, #181719 100%);
 }
 
 /* =============
@@ -327,20 +328,26 @@ video {
 */
 
 #about-me {
-  display: flex;
-  flex-direction: row;
-  padding: 4rem;
+  width: 100%;
+  padding: 2rem 4rem 2rem 4rem;
   margin: 0;
   text-align: justify;
+  color: white;
 }
 
-#about-me-info p {
-  color: black;
+#about-me-section {
+  margin-top: 2rem;
+}
+
+#about-me-info {
+  text-align: justify;
 }
 
 #about-me-map {
   height: 400px;
   display: flex;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
   justify-content: center;
   align-items: center;
 }
@@ -350,8 +357,83 @@ video {
   width: 100%;
   z-index: 0;
   border: 4px solid var(--main-red);
-  border-radius: 15px 50px 30px;
+  border-radius: 25px;
 }
+
+.question {
+  padding: 1rem 1.5rem;
+  margin-bottom: 1rem;
+  border: 2px solid var(--main-red);
+  color: white;
+  border-radius: var(--radius);
+  box-shadow: var(--light-shadow);
+}
+
+.question header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.question header h4 {
+  margin-bottom: 0;
+}
+
+.question h4 {
+  text-transform: none;
+  line-height: 1.5;
+}
+
+.question p {
+  color: white;
+  margin-bottom: 0;
+  margin-top: 0.5rem;
+  transition: var(--transition);
+}
+
+.btn-question {
+  background: transparent;
+  border-color: transparent;
+  width: 2rem;
+  height: 2rem;
+  background: var(--clr-grey-special);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 100%;
+  border-color: var(--clr-red-special);
+  color: var(--clr-red-special);
+  cursor: pointer;
+  margin-left: 1rem;
+  align-self: center;
+}
+
+.btn-question:focus {
+  outline: 0;
+}
+
+/*
+@media (max-width: 1210px) {
+  #about-me-info {
+    font-size: 0.9em;
+  }
+  #about-me-map {
+    height: 300px;
+  }
+  .question header h4 {
+    font-size: 1.3em;
+  }
+  .question p {
+    font-size: 0.8em;
+  }
+}
+
+@media (max-width: 992px) {
+  #about-me-questions {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
+}
+*/
 
 /* =============
  * Skills
@@ -439,12 +521,6 @@ video {
 .field-info {
   padding-top: 2rem;
   text-align: justify;
-}
-
-#skills-info {
-  text-align: justify;
-  padding-right: 2rem;
-  padding-bottom: 1rem;
 }
 
 .technologies-grid-item {
